--- a/accueil.html
+++ b/accueil.html
@@ -1,98 +1,107 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
 
 <!-- Web1 | Travail Mi-Session | Benjamin Goudreault -->
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title> Accueil | Joumla Design </title>
-<link href="css/style.css" rel="stylesheet" type="text/css" />
-</head>
-
-
-<body>
-<div id="stickyFoooterHack-accueil">
-<div id="top-border">
-</div>                                                  <!-- /top-border -->
-<div id="header">
-    <h1 id="logo"><a href="accueil.html"> Accueil | Joumla Design </a></h1>
-</div>                                                  <!-- /header -->
-<div id="mainNav">
+<html xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Accueil | Joumla Design</title>
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
+ </head>
+ <body>
+  <div id="stickyFoooterHack-accueil">
+   <div id="top-border"></div>
+   <div id="header">
+    <h1 id="logo"><a href="accueil.html">Accueil | Joumla Design</a></h1>
+   </div>
+   <div id="mainNav">
     <ul id="menu">
-    <li><a href="accueil.html">
-             <span class="current"> ACCUEIL </span>     </a></li>
-    <li><a href="a-propos.html">    À PROPOS            </a></li>
-    <li><a href="portfolio.html">   PORTFOLIO           </a></li>
-    <li><a href="liens.html">       LIENS               </a></li>
-    <li><a href="nous-joindre.html">NOUS JOINDRE        </a></li>
-    </ul>                                               <!-- /ul menu -->
-</div>                                                  <!-- /mainNav -->
-<div id="accueil-container" class="cf">
-<div id="accueil-wrap">
-    <div id="left-column">
-        <h2> Bienvenue </h2>
-        <p> Quisque fringilla nisl ut turpis. Nullam viverra diam nec purus.
-        Duis eu est. Pellentesque vitae lacus. Proin venenatis leo eget magna.
-        Integer imperdiet nulla in eros. Pellentesque lectus enim, molestie id,
-        tristique sed, tempor eu, neque. Phasellus magna est, tristique et,
-        congue id, rutrum sed, risus. Sed tellus dui, rhoncus nec, congue a,
-        gravida et, risus. Pellen-tesque porttitor ipsum et massa. </p>
-        <p> Mauris varius sagittis ante. Nulla interdum pulvinar quam.
-        Curabitur ante metus, laoreet nec, tincidunt vitae, interdum
-        scelerisque, <a href="#">risus</a>. </p>
+     <li><a href="accueil.html"><span class="current">ACCUEIL</span></a></li>
+     <li><a href="a-propos.html">À PROPOS</a></li>
+     <li><a href="portfolio.html">PORTFOLIO</a></li>
+     <li><a href="liens.html">LIENS</a></li>
+     <li><a href="nous-joindre.html">NOUS JOINDRE</a></li>
+    </ul>
+   </div>
+   <div id="accueil-container" class="cf">
+    <div id="accueil-wrap">
+     <div id="left-column">
+      <h2>Bienvenue</h2>
+
+      <p>Quisque fringilla nisl ut turpis.  Nullam viverra diam nec purus.
+      Duis eu est.  Pellentesque vitae lacus.  Proin venenatis leo eget magna.
+      Integer imperdiet nulla in eros.  Pellentesque lectus enim, molestie id,
+      tristique sed, tempor eu, neque.  Phasellus magna est, tristique et,
+      congue id, rutrum sed, risus.  Sed tellus dui, rhoncus nec, congue a,
+      gravida et, risus.  Pellen-tesque porttitor ipsum et massa.</p>
+
+      <p>Mauris varius sagittis ante.  Nulla interdum pulvinar quam.  Curabitur
+      ante metus, laoreet nec, tincidunt vitae, interdum scelerisque,
+      <a href="#">risus</a>.</p>
+
       <div id="white-box">
-        <p> <span class="orange">Integer ullamcorper magna ac eros.</span> Sed
-        ante. Duis eget purus. Sed ullamcorper arcu ac nunc. Maecenas felis.
-        Pellentesque enim nunc, blandit at, mollis rhoncus, con-vallis nec,
-        nunc. Cras eget turpis.  Cras ut risus. Sed sagittis gravida pede.
-        Proin ante. Duis porta. Donec tincidunt justo ut risus mattis
-        ullamcorper. Nullam magna. Lorem ipsum dolor sit amet. </p>
-        </div>                                          <!-- /white-box -->
-    </div>                                              <!-- /left-column -->
-    <div id="right-column">
-        <h2> Portfolio </h2>
-        <div id="portfolio_1" class="paddingBottom">
-        <img class="imgleft" src="img/brick.png" alt="Shade frame" />
-          <p> Nulla vel eros. Praesent ut urna. Morbi gravida. Lorem ipsum
-            dolor sit amet, consectetuer adipiscing elit. Cura-bitur ac ante.
-            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-            posuere cubilia Curae; Praesent </p>
-          <p> Nulla vel eros. Praesent ut urna. Morbi gravida. Lorem ipsum
-            dolor sit amet, consectetuer adipiscing elit. Curabitur ac ante.
-            Vestibulum ante </p>
-        </div>                                          <!-- /portofolio_1 -->
-        <div id="portfolio_2" class="paddingBottom">
-        <img class="imgleft" src="img/metal.png" alt="Métal" />
-          <p> Nulla vel eros. Praesent ut urna. Morbi gravida. Lorem ipsum
-            dolor sit amet, consectetuer adipiscing elit. Cura-bitur ac ante.
-            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-            posuere cubilia Curae; Praesent </p>
-        </div>                                          <!-- /portofolio_2 -->
-        <div id="portfolio_3" class="paddingBottom">
-        <img class="imgleft" src="img/scaled-paint.png" alt="Peinture écaillée" />
-          <p> Nulla vel eros. Praesent ut urna. Morbi gravida. Lorem ipsum
-            dolor sit amet, consectetuer adipiscing elit. Cura-bitur ac ante.
-            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-            posuere cubilia Curae; Praesent </p>
-          <p> Nulla vel eros. Praesent ut urna. Morbi gravida. Lorem ipsum
-            dolor sit amet, consectetuer adipiscing elit. Curabitur ac ante.
-            Vestibulum ante </p>
-        </div>                                          <!-- /portofolio_3 -->
-        <div id="portfolio_4" class="paddingBottom">
-        <img class="imgleft" src="img/rust.png" alt="Rouille" />
-          <p> Nulla vel eros. Praesent ut urna. Morbi gravida. Lorem ipsum
-            dolor sit amet, consectetuer adipiscing elit. Cura-bitur ac ante.
-            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-            posuere cubilia Curae; Praesent </p>        
-        </div>                                          <!-- /portofolio_4 -->
-    </div>                                              <!-- /right-column -->
-</div>                                                  <!-- /accueil-wrap -->
-</div>                                                  <!-- /accueil-container -->
-</div>                                                  <!-- /stickyFoooterHack-accueil -->
-<div id="footer">
-    <p> © Virtua Design Tous droits réservés </p>
-</div>                                                  <!-- /footer -->
-</body>
 
+       <p><span class="orange">Integer ullamcorper magna ac eros.</span>Sed
+       ante.  Duis eget purus.  Sed ullamcorper arcu ac nunc.  Maecenas felis.
+       Pellentesque enim nunc, blandit at, mollis rhoncus, con-vallis nec,
+       nunc.  Cras eget turpis.  Cras ut risus.  Sed sagittis gravida pede.
+       Proin ante.  Duis porta.  Donec tincidunt justo ut risus mattis
+       ullamcorper.  Nullam magna.  Lorem ipsum dolor sit amet.</p>
 
+      </div>
+     </div>
+     <div id="right-column">
+      <h2>Portfolio</h2>
+      <div id="portfolio_1" class="paddingBottom">
+       <img class="imgleft" src="img/brick.png" alt="Shade frame" />
+
+       <p>Nulla vel eros.  Praesent ut urna.  Morbi gravida.  Lorem ipsum dolor
+       sit amet, consectetuer adipiscing elit.  Cura-bitur ac ante.  Vestibulum
+       ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+       Curae; Praesent</p>
+
+       <p>Nulla vel eros.  Praesent ut urna.  Morbi gravida.  Lorem ipsum dolor
+       sit amet, consectetuer adipiscing elit.  Curabitur ac ante.  Vestibulum
+       ante</p>
+
+      </div>
+      <div id="portfolio_2" class="paddingBottom">
+       <img class="imgleft" src="img/metal.png" alt="Métal" />
+
+       <p>Nulla vel eros.  Praesent ut urna.  Morbi gravida.  Lorem ipsum dolor
+       sit amet, consectetuer adipiscing elit.  Cura-bitur ac ante.  Vestibulum
+       ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+       Curae; Praesent</p>
+
+      </div>
+      <div id="portfolio_3" class="paddingBottom">
+       <img class="imgleft" src="img/scaled-paint.png" alt="Vielle peinture" />
+
+       <p>Nulla vel eros.  Praesent ut urna.  Morbi gravida.  Lorem ipsum dolor
+       sit amet, consectetuer adipiscing elit.  Cura-bitur ac ante.  Vestibulum
+       ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+       Curae; Praesent</p>
+
+       <p>Nulla vel eros.  Praesent ut urna.  Morbi gravida.  Lorem ipsum dolor
+       sit amet, consectetuer adipiscing elit.  Curabitur ac ante.  Vestibulum
+       ante</p>
+
+      </div>
+      <div id="portfolio_4" class="paddingBottom">
+       <img class="imgleft" src="img/rust.png" alt="Rouille" />
+
+       <p>Nulla vel eros.  Praesent ut urna.  Morbi gravida.  Lorem ipsum dolor
+       sit amet, consectetuer adipiscing elit.  Cura-bitur ac ante.  Vestibulum
+       ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+       Curae; Praesent</p>
+
+      </div>
+     </div>
+    </div>
+   </div>
+  </div>
+  <div id="footer">
+   <p>© Virtua Design Tous droits réservés</p>
+  </div>
+ </body>
 </html>
