--- a/index.html
+++ b/index.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
 
 <!-- Web1 | Travail Mi-Session | Benjamin Goudreault -->
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title> Joumla Design </title>
-<link href="css/style.css" rel="stylesheet" type="text/css" />
-</head>
-
-
-<body>
-<div id="top-border">
-</div>                                                  <!-- /top-border -->
-<div id="splashHeader">
-    <h1 id="splashLogo"> Accueil | Joumla Design </h1>
-</div>                                                  <!-- /splashHeader -->
-<div id="splashImage">
-    <a href="accueil.html"> Accueil | Joumla Design </a>
-</div>                                                  <!-- /splashImage -->
-</body>                                                 <!-- /body -->
-
-
+<html xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Joumla Design</title>
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
+ </head>
+ <body>
+  <div id="top-border"></div>
+  <div id="splashHeader">
+   <h1 id="splashLogo">Accueil | Joumla Design</h1>
+  </div>
+  <div id="splashImage">
+   <a href="accueil.html">Accueil | Joumla Design</a>
+  </div>
+ </body>
 </html>
