--- a/a-propos.html
+++ b/a-propos.html
@@ -1,64 +1,61 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
 
 <!-- Web1 | Travail Mi-Session | Benjamin Goudreault -->
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title> À Propos | Joumla Design </title>
-<link href="css/style.css" rel="stylesheet" type="text/css" />
-</head>
-
-
-<body>
-<div id="stickyFoooterHack">
-<div id="top-border">
-</div>                                                  <!-- /top-border -->
-<div id="header">
-    <h1 id="logo"><a href="accueil.html"> Accueil | Joumla Design </a></h1>
-</div>                                                  <!-- /header -->
-<div id="mainNav">
+<html xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>À Propos | Joumla Design</title>
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
+ </head>
+ <body>
+  <div id="stickyFoooterHack">
+   <div id="top-border">
+   </div>
+   <div id="header">
+    <h1 id="logo"><a href="accueil.html">Accueil | Joumla Design</a></h1>
+   </div>
+   <div id="mainNav">
     <ul id="menu">
-    <li><a href="accueil.html">     ACCUEIL             </a></li>
-    <li><a href="a-propos.html">
-             <span class="current"> À PROPOS </span>    </a></li>
-    <li><a href="portfolio.html">   PORTFOLIO           </a></li>
-    <li><a href="liens.html">       LIENS               </a></li>
-    <li><a href="nous-joindre.html">NOUS JOINDRE        </a></li>
-    </ul>                                               <!-- /ul menu -->
-</div>                                                  <!-- /mainNav -->
-<div id="container">
+     <li><a href="accueil.html">ACCUEIL</a></li>
+     <li><a href="a-propos.html"><span class="current">À PROPOS</span></a></li>
+     <li><a href="portfolio.html">PORTFOLIO</a></li>
+     <li><a href="liens.html">LIENS</a></li>
+     <li><a href="nous-joindre.html">NOUS JOINDRE</a></li>
+    </ul>
+   </div>
+   <div id="container">
     <div id="wrap">
-    <h2> À propos </h2>
+     <h2>À propos</h2>
+     <img class="picleft" src="img/young-francois.jpg" alt="François" />
 
-    <img class="picleft" src="img/young-francois.jpg" alt="François" />
+     <p>Quisque fringilla nisl ut turpis.  Nullam viverra diam nec purus.  Duis
+     eu est.  Pellentesque vitae lacus.  Proin venenatis leo eget magna.
+     Integer imperdiet nulla in eros.  Pellentesque lectus enim, molestie id,
+     tristique sed, tempor eu, neque.  Phasellus magna est, tristique et,
+     congue id, rutrum sed.  Proin venenatis leo eget magna.  Integer imperdiet
+     nulla in eros.  Pellentesque lectus enim, molestie id, tristique sed,
+     tempor eu, neque.  Phasellus magna.</p>
 
-    <p> Quisque fringilla nisl ut turpis. Nullam viverra diam nec purus. Duis
-      eu est. Pellentesque vitae lacus. Proin venenatis leo eget magna. Integer
-      imperdiet nulla in eros. Pellentesque lectus enim, molestie id, tristique
-      sed, tempor eu, neque. Phasellus magna est, tristique et, congue id,
-      rutrum sed. Proin venenatis leo eget magna. Integer imperdiet nulla in
-      eros.  Pellentesque lectus enim, molestie id, tristique sed, tempor eu,
-      neque.  Phasellus magna. </p>
-    <p> Quisque fringilla nisl ut turpis. Nullam viverra diam nec purus. Duis
-      eu est. Pellentesque vitae lacus. Proin venenatis leo eget magna. Integer
-      imperdiet nulla in eros. Pellentesque lectus enim, molestie id, tristique
-      sed, tempor eu, neque. Phasellus magna est, tristique et, congue id,
-      rutrum sed, risus. Sed tellus dui, rhoncus nec, congue a, gravida et,
-      risus.  Pellentesque porttitor ipsum et massa. </p>
-    <p> Quisque fringilla nisl ut turpis.  Nullam viverra diam nec purus. Duis
-      est. Pellentesque vitae lacus.  Proin venenatis leo eget magna. Integer
-      eu imperdiet nulla in eros.  Pellentesque lectus enim, molestie id,
-      tristique sed, tempor eu, neque.  Phasellus magna est, tristique et,
-      congue id, rutrum sed, risus. Sed tellus dui, rhoncus nec, congue a,
-      gravida et, risus. Pellentesque porttitor ipsum et massa. </p> 
-    </div>                                              <!-- /wrap -->
-</div>                                                  <!-- /container -->
-</div>                                                  <!-- /stickyFoooterHack -->
-<div id="footer">
-    <p> © Virtua Design Tous droits réservés </p>
-</div>                                                  <!-- /footer -->
-</body>
+     <p>Quisque fringilla nisl ut turpis.  Nullam viverra diam nec purus.  Duis
+     eu est.  Pellentesque vitae lacus.  Proin venenatis leo eget magna.
+     Integer imperdiet nulla in eros.  Pellentesque lectus enim, molestie id,
+     tristique sed, tempor eu, neque.  Phasellus magna est, tristique et,
+     congue id, rutrum sed, risus.  Sed tellus dui, rhoncus nec, congue a,
+     gravida et, risus.  Pellentesque porttitor ipsum et massa.</p>
 
+     <p>Quisque fringilla nisl ut turpis.  Nullam viverra diam nec purus.  Duis
+     est.  Pellentesque vitae lacus.  Proin venenatis leo eget magna.  Integer
+     eu imperdiet nulla in eros.  Pellentesque lectus enim, molestie id,
+     tristique sed, tempor eu, neque.  Phasellus magna est, tristique et,
+     congue id, rutrum sed, risus.  Sed tellus dui, rhoncus nec, congue a,
+     gravida et, risus.  Pellentesque porttitor ipsum et massa.</p>
 
+    </div>
+   </div>
+  </div>
+  <div id="footer">
+   <p>© Virtua Design Tous droits réservés</p>
+  </div>
+ </body>
 </html>
