--- a/nous-joindre.html
+++ b/nous-joindre.html
@@ -21,8 +21,7 @@
      <li><a href="a-propos.html">À PROPOS</a></li>
      <li><a href="portfolio.html">PORTFOLIO</a></li>
      <li><a href="liens.html">LIENS</a></li>
-     <li><a href="nous-joindre.html">
-       <span class="current">NOUS JOINDRE</span></a></li>
+     <li><a href="nous-joindre.html"><span class="current">NOUS JOINDRE</span></a></li>
     </ul>
    </div>
    <div id="container">
